--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
-cycler==0.11.0
-fonttools==4.37.1
-kiwisolver==1.4.4
-matplotlib==3.5.3
-numpy==1.23.2
-packaging==21.3
-pandas==1.4.3
-Pillow==9.2.0
-pyparsing==3.0.9
-python-dateutil==2.8.2
-pytz==2022.2.1
-six==1.16.0
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+Flask==1.1.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.2
+joblib==0.15.1
+jsonify==0.5
+MarkupSafe==1.1.1
+numpy==1.19.0
+requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
+sklearn==0.0
+threadpoolctl==2.1.0
+urllib3==1.25.9
+Werkzeug==1.0.1
+wincertstore==0.2
+gunicorn
